# campfire

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/alpine-cli/: .gitignore  Campfire.toml  message.txt  tutorial.md
spec/: configuration.md  container-execution.md  host-inputs.md  overview.md  testing-and-platforms.md
src/: app.rs  commands.rs  config.rs  host.rs  lib.rs  main.rs  podman.rs
tests/: cli_tests.rs  commands_tests.rs  config_tests.rs  host_tests.rs  podman_integration_tests.rs  podman_tests.rs
